nodeapp-test.yml

--- a/.github/workflows/nodeapp-test.yml
+++ b/.github/workflows/nodeapp-test.yml
@@ -1,6 +1,10 @@
 name: Testing Nodeapp Calls
 
-on: [push]
+on:
+  push:
+    branches: [ developer ]
+  pull_request:
+    branches: [ developer ]
 
 jobs:
   build:
