--- a/.github/workflows/nodeapp-test.yml
+++ b/.github/workflows/nodeapp-test.yml
@@ -2,9 +2,9 @@ name: Testing Nodeapp Calls
 
 on:
   push:
-    branches: [ developer ]
+    branches: [ develop ]
   pull_request:
-    branches: [ developer ]
+    branches: [ develop ]
 
 jobs:
   build:
