--- a/.github/workflows/nodeapp-test.yml
+++ b/.github/workflows/nodeapp-test.yml
@@ -2,9 +2,9 @@ name: Testing Nodeapp Calls
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ feature, develop, release, hotfix ]
   pull_request:
-    branches: [ develop ]
+    branches: [ feature, develop, release, hotfix ]
 
 jobs:
   build:
